Implement tests for user, category, reports...
